feat: add redis & lock